# usb_otg_update

./: .gitignore  CMakeLists.txt  Command.md  build.sh  sdkconfig  sdkconfig.old  xxx.c
main/: CMakeLists.txt  esp32s3_flash_bridge.c  esp_usb_otg.c  esp_usb_otg_serial_dev.c  idf_component.yml
rbg_led_ws_handler/: rbg_handler.c  rbg_handler.h
usb_flash_handler/: flash_task.c  rw_task.c  uart_task.c  usb_flash_handler.h  usb_host_task.c
usb_handler/: usb_handler.c
usb_handler/include/: usb_handler.h
